# noteszen

./: README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
.github/workflows/: ci.yml
dist-electron/: main.js  preload.mjs  sql-wasm-BhbcYolj.js  sql-wasm-RRobC6sV.js
electron/: db.ts  main.ts  preload.ts
src/: App.tsx  electron.d.ts  index.css  main.tsx  tauri-bridge.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs
src/components/: AIChatPanel.tsx  AIMarkdownView.tsx  AISavePreview.tsx  AITypingIndicator.tsx  CardCoverMedia.tsx  CommandPalette.tsx  CoverImage.tsx  Editor.tsx  EditorCodeBlock.tsx  EditorShell.tsx  FolderDialog.tsx  GlobalSearch.tsx  GraphView.tsx  GridCard.tsx  HighlightColorMenu.tsx  HomeDashboard.tsx  MarkdownPreview.tsx  MobileView.tsx  NewNoteCard.tsx  NoteCard.tsx  NoteListItem.tsx  NoteTabs.tsx  Onboarding.tsx  QuickCapture.tsx  SettingsPanel.tsx  TableOfContents.tsx  TemplateGallery.tsx  TodoPanel.tsx  TrashView.tsx  VaultSwitcher.tsx  VersionHistorySheet.tsx  WorkspaceSidebar.tsx  code-block-command.tsx  icon-swap.tsx  tabs.tsx
src/hooks/: use-copy-to-clipboard.ts  use-mobile.ts  useLiveClock.ts
src/lib/: ai-output.ts  ai-settings.ts  code-block-command.ts  headings.ts  image-utils.ts  markdown-preview.ts  note-cover.ts  note-filters.ts  note-versions.ts  openrouter.ts  plugins.ts  search.ts  spellcheck.ts  tiptap-extensions.ts  toast.ts  todos.ts
(+11 files in other folders)
