[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = "z"       # Optimize for binary size (minimizes memory layout)
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce parallel codegen units to improve optimizations
panic = "abort"       # Abort on panic to remove unwinding tables
strip = true          # Strip all debug symbols and info
